src/objects/HotelRoom__c.object
<CustomObject>
    <fields>
        <fullName>CheckInDate__c</fullName>
        <label>CheckInDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CheckOutDate__c</fullName>
        <label>CheckOutDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hotel Rooms</relationshipLabel>
        <relationshipName>Hotel_Rooms4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hotel Rooms (Delegate 2)</relationshipLabel>
        <relationshipName>Hotel_Rooms5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hotel Rooms (Delegate 3)</relationshipLabel>
        <relationshipName>Hotel_Rooms6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>CASE(Opportunity__r.Convention__c, &quot;Arizona&quot;, &quot;Arizona&quot;, &quot;Northern California&quot;, &quot;Northern California&quot;, &quot;Southern California&quot;, &quot;Southern California&quot; , &quot;Southern California - Orange County&quot;, &quot;Southern California - Orange County&quot;, &quot;Southern California - Los Angeles&quot;, &quot;Southern California - Los Angeles&quot;, &quot;Pacific Northwest&quot;, &quot;Pacific Northwest&quot;, &quot;Texas&quot;, &quot;Texas&quot;, &quot;Ohio River Valley&quot;, &quot;Ohio River Valley&quot;, &quot;Northeast&quot;, &quot;Northeast&quot;, &quot;Mid-Atlantic&quot;, &quot;Mid-Atlantic&quot;, &quot;Southeast&quot;, &quot;Southeast&quot;, &quot;Midwest&quot;, &quot;Midwest&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Hotel Rooms</relationshipLabel>
        <relationshipName>Hotel_Rooms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R1__c</fullName>
        <label>D1 Sen/Rep</label>
        <picklist>
            <picklistValues>
                <fullName>Senator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R2__c</fullName>
        <label>D2 Sen/Rep</label>
        <picklist>
            <picklistValues>
                <fullName>Senator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R3__c</fullName>
        <label>D3 Sen/Rep</label>
        <picklist>
            <picklistValues>
                <fullName>Senator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Room_Type__c</fullName>
        <label>Room Type</label>
        <picklist>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher / Advisor Shared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher / Advisor Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Requirements__c</fullName>
        <label>Special Requirements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Hotel Room</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Room_Type__c</columns>
        <columns>Gender__c</columns>
        <columns>D1__c</columns>
        <columns>D2__c</columns>
        <columns>D3__c</columns>
        <columns>D4__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HR-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>